k8s/spack/drift-server/api/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drift-server-spack-io
  namespace: spack
  labels:
    app: drift-server-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: drift-server-spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: drift-server-spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: ghcr.io/buildsi/drift-server:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        spack.io/node-pool: base
