k8s/spack/drift-server/api/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drift-server-spack-io
  namespace: spack
  labels:
    app: drift-server-spack-io
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: drift-server-spack-io
    svc: web
